infra/k8s/base/20-order-accept-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-accept
  namespace: contoso-orders
  labels:
    app.kubernetes.io/name: order-accept
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: order-accept
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-accept
    spec:
      containers:
        - name: order-accept
          image: ${IMAGE_ORDER_ACCEPT}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
