infra/k8s/base/30-order-process-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-process
  namespace: contoso-orders
  labels:
    app.kubernetes.io/name: order-process
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: order-process
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order-process
    spec:
      containers:
        - name: order-process
          image: ${IMAGE_ORDER_PROCESS}
          imagePullPolicy: IfNotPresent
